src/test/ui-fulldeps/gated-plugin.stderr
error[E0658]: compiler plugins are experimental and possibly buggy (see issue #29597)
  --> $DIR/gated-plugin.rs:3:1
   |
LL | #![plugin(attr_plugin_test)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(plugin)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
